--- a/package.json
+++ b/package.json
@@ -3,10 +3,16 @@
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "jest",
         "start": "node src/server/index.js",
         "build-prod": "webpack --config webpack.prod.js",
         "build-dev": "webpack-dev-server  --config webpack.dev.js --open"
+    },
+    "jest": {
+        "testEnvironment": "node",
+        "coveragePathIgnorePatterns": [
+            "/node_modules/"
+        ]
     },
     "keywords": [],
     "author": "",
@@ -17,22 +23,26 @@
         "body-parser": "^1.19.0",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
-        "webpack-cli": "^3.3.5"
+        "webpack-cli": "^3.3.12"
     },
     "devDependencies": {
-        "@babel/core": "^7.5.4",
-        "@babel/preset-env": "^7.5.4",
-        "babel-loader": "^8.0.6",
+        "@babel/core": "^7.10.3",
+        "@babel/preset-env": "^7.10.3",
+        "@babel/preset-es2015": "^7.0.0-beta.53",
+        "babel-jest": "^26.1.0",
+        "babel-loader": "^8.1.0",
         "clean-webpack-plugin": "^3.0.0",
         "cors": "^2.8.5",
         "css-loader": "^3.6.0",
         "file-loader": "^6.0.0",
         "html-webpack-plugin": "^3.2.0",
+        "jest": "^26.1.0",
         "mini-css-extract-plugin": "^0.9.0",
         "node-sass": "^4.14.1",
         "optimize-css-assets-webpack-plugin": "^5.0.3",
         "sass-loader": "^8.0.2",
         "style-loader": "^1.2.1",
+        "supertest": "^4.0.2",
         "terser-webpack-plugin": "^1.4.4",
         "url-loader": "^4.1.0",
         "webpack": "^4.43.0",
