--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "terser-webpack-plugin": "^1.4.4",
         "url-loader": "^4.1.0",
         "webpack": "^4.43.0",
-        "webpack-dev-server": "^3.11.0"
+        "webpack-dev-server": "^3.11.0",
+        "workbox-webpack-plugin": "^5.1.3"
     }
 }
